openmediavault (0.4.2) stable; urgency=low

  * Update locales.
  * Fix various bugs in WebGUI.
  * Fix bug in OMVStorageDeviceAbstract::getDeviceFileById() method.
  * Mantis 0000618: Disable temperature logging if temperature checks are
    disabled under SMART.
  * Mantis 0000628: Enable and view boot log messages.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 18 Oct 2012 17:50:54 +0200

openmediavault (0.4.1) stable; urgency=low

  * Mantis 0000613: First letter in username automatically gets capitalized
    at log in.
  * Mantis 0000614: Firewall is not working. Caused by xmlstarlet issue.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 10 Oct 2012 11:58:17 +0200

openmediavault (0.4.0.2) stable; urgency=low

  * Update locales.
  * Various bug fixes.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 02 Oct 2012 21:55:17 +0200

openmediavault (0.4.0.1) stable; urgency=low

  * Mantis 0000595: Revert previous changes.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 26 Sep 2012 18:05:17 +0200

openmediavault (0.4) stable; urgency=low

  * Upgrade to xmlstarlet 1.3.1.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 09 Sep 2012 01:24:21 +0200

openmediavault (0.3.1) stable; urgency=low

  * Update locales.
  * Various bug fixes.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 02 Oct 2012 21:53:33 +0200

openmediavault (0.3.0.26) stable; urgency=low

  * Update mdadm.conf during system initialization to import existing
    RAID arrays.
  * Display a notification to reload the page after plugins have been
    updated via the update manager in the WebGUI.
  * Rename PHP session name.
  * Mantis 0000595: Revert previous changes.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Sep 2012 20:46:54 +0200

openmediavault (0.3.0.25) stable; urgency=low

  * Fix trigger issue.
  * Improve 'Send test email' implementation.