@@ -493,6 +493,7 @@
 					<perms>1</perms>
 					<acls>1</acls>
 					<xattrs>0</xattrs>
+					<dryrun>0</dryrun>
 					<extraoptions></extraoptions>
 					// remote
 					<mode>push|pull</mode>
