@@ -82,6 +82,7 @@ class RsyncRpc extends OMVRpc {
 					"perms":{"type":"boolean"},
 					"acls":{"type":"boolean"},
 					"xattrs":{"type":"boolean"},
+					"dryrun":{"type":"boolean"},
 					"extraoptions":{"type":"string"},
 					"mode":{"type":"string","enum":["push","pull"],'.
 					  '"optional":true},
@@ -244,6 +245,7 @@ class RsyncRpc extends OMVRpc {
 		$object['perms'] = boolval($object['perms']);
 		$object['acls'] = boolval($object['acls']);
 		$object['xattrs'] = boolval($object['xattrs']);
+		$object['dryrun'] = boolval($object['dryrun']);
 		$object['everynminute'] = boolval($object['everynminute']);
 		$object['everynhour'] = boolval($object['everynhour']);
 		$object['everyndayofmonth'] = boolval($object['everyndayofmonth']);
@@ -295,6 +297,7 @@ class RsyncRpc extends OMVRpc {
 			"perms" => array_boolval($data, 'perms'),
 			"acls" => array_boolval($data, 'acls'),
 			"xattrs" => array_boolval($data, 'xattrs'),
+			"dryrun" => array_boolval($data, 'dryrun'),
 			"extraoptions" => $data['extraoptions'],
 			"mode" => isset($data['mode']) ? $data['mode'] : "",
 			"password" => isset($data['password']) ? $data['password'] : ""
